# YA-P-CPP

./: README.md
Task_1_5_CPP/: Задача 1.docx
Task_1_5_CPP/Task_1_5/: CMakeLists.txt  main.cpp
Task_2_5_CPP/: Задача 2.docx
Task_2_5_CPP/Task2/: CMakeLists.txt  CodeModel.cpp  CodeModel.h  main.cpp
Task_3_5_CPP/: Задача 3.docx
Task_3_5_CPP/Task3/: CMakeLists.txt  main.cpp
Task_4_5_CPP/: Задача 4.doc
Task_4_5_CPP/4_11_2/: CMakeLists.txt  dictionary.cpp  dictionary.h  input.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt  test.cpp
